fixed sub nav-bar forum link not showing

--- a/src/components/forum-sub-nav/forum-sub-nav.scss
+++ b/src/components/forum-sub-nav/forum-sub-nav.scss
@@ -44,6 +44,7 @@ $shadow: 0px 3px 5px -3px rgba(133, 131, 131, 0.75);
   }
     @include smartphone() {
       overflow-x: scroll;
+  justify-content: flex-start;
     }
     .sub-nav-link {
       white-space: nowrap;
